bugfix report page and chat removed not update issue

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <script
       type="text/javascript"
       src="https://sdk.twilio.com/js/client/v1.13/twilio.min.js"
