--- a/web/src/index.html
+++ b/web/src/index.html
@@ -22,11 +22,11 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link rel="manifest" href="manifest.json" />
-    <script
+    <!-- <script
       type="text/javascript"
       src="https://sdk.twilio.com/js/client/v1.13/twilio.min.js"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"></script>
+    ></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   </head>
   <body class="mat-typography">
