--- a/web/src/index.html
+++ b/web/src/index.html
@@ -6,7 +6,8 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link rel="icon" type="image/x-icon" href="cx.png" /> -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
+    <link rel="icon" href="data:,">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
