--- a/web/src/index.html
+++ b/web/src/index.html
@@ -5,7 +5,7 @@
     <title>Remote Patient Monitoring</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="icon" type="image/x-icon" href="cx.png" /> -->
+     <link rel="icon" type="image/x-icon" href="cx.png" /> 
     <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
     <link rel="icon" href="data:,">
 
